# ts_work

./: README.md  matched_hashes.txt  package-lock.json  package.json
combine/mx-api-service-1.14.0/: README.md  package-lock.json
combine/mx-api-service-51c26dfd59f30f35d2099b151f41c2c8d8b4f492/: README.md  package.json
combine/mx-exchange-service-54baf3e65369fde1d005a9b5984a1690edb328c4/: .env.example  package-lock.json  package.json  schema.gql
combine/mx-explorer-dapp-main/: README.md  docker-compose.yaml  entrypoint.sh  index.html
combine/mx-governance-service-2dcb26bb2de7c2e4e78ffb076d53a463a2515a42/: .env.example  package.json
combine/mx-lite-wallet-dapp-a2a37fa9ed96fb607ee805c3cf310ed4a7f5fab0/: CHANGELOG.md  README.md  docker-compose.yaml  entrypoint.sh  package.json  tailwind.config.js
combine/mx-mcp-7ed06c2bbc7b71764e55759f057c2da6aab55e98/: README.md  smithery.yaml
combine/mx-nft-service-763e124275dfdeb803d40566b94c47f419fa9f87/: .env.example  README.md  package.json  (+1 more)
combine/sc-axelar-cgp-rs/sc-axelar-cgp-rs-b863a1ba7fe8180e63961f721a63c6d53d818137/interchain-token-service/: Cargo.toml
combine/sc-axelar-cgp-rs/sc-axelar-cgp-rs-b863a1ba7fe8180e63961f721a63c6d53d818137/interchain-token-service/meta/: Cargo.toml
combine/sc-axelar-cgp-rs/sc-axelar-cgp-rs-b863a1ba7fe8180e63961f721a63c6d53d818137/interchain-token-service/src/: abi.rs  abi_types.rs  constants.rs  executable.rs  lib.rs
combine/sc-axelar-cgp-rs/sc-axelar-cgp-rs-b863a1ba7fe8180e63961f721a63c6d53d818137/interchain-token-service/tests/: its_abi_decode_test.rs  its_abi_encode_test.rs
(+2751 files in other folders)
